--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <h1 class="mb-0">
                         Tyler
                         <span class="text-primary">North</span>
+                        <a href="../inclass/html/scratch.html">See Resume</a>
                     </h1>
                     <div class="subheading mb-5">
                         1850 N University Avenue · Provo, Ut 84604 · (913) 948-4546 ·
