--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 class="mb-0">
                         Tyler
                         <span class="text-primary">North</span>
-                        <a href="../inclass/html/scratch.html">See Resume</a>
+                        <a href="scratch.html">See Website</a>
                     </h1>
                     <div class="subheading mb-5">
                         1850 N University Avenue · Provo, Ut 84604 · (913) 948-4546 ·
@@ -152,8 +152,7 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I love learning new skills and hobbies. I have played soccer and tennis most of my life and enjoy adventuring in the outdoors!
                     </p>
-                    <img src="../inclass/img/soccer.png" alt="soccer">
-                    <img src="../inclass/img/tennis.jpg" alt="tennis">
+                    
                     <p class="mb-0">When forced indoors, I love hang out with my family, watch movies, and play board games.</p>
                 </div>
             </section>
