--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
                     <h1 class="mb-0">
                         Tyler
                         <span class="text-primary">North</span>
-                        <a href="../inclass/html/scratch.html">See Website</a>
                     </h1>
                     <div class="subheading mb-5">
                         1850 N University Avenue · Provo, Ut 84604 · (913) 948-4546 ·
                         <a href="mailto:name@email.com">tylerjnorth8614@gmail.com</a>
-                        <a href="../inclass/html/scratch.html">See Website</a>
+                        <a href="html/scratch.html">See Website</a>
                     </div>
                     <p class="lead mb-5">I am currently studing at BYU as a Freshmen and will be applying for the Mariott School of Business in the Summer of 2024.</p>
                     <div class="social-icons">
@@ -153,7 +152,8 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I love learning new skills and hobbies. I have played soccer and tennis most of my life and enjoy adventuring in the outdoors!
                     </p>
-                    
+                    <img src="img/soccer.png" alt="soccer"> 
+                    <img src="img/tennis.jpg" alt="tennis">
                     <p class="mb-0">When forced indoors, I love hang out with my family, watch movies, and play board games.</p>
                 </div>
             </section>
