--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     </h1>
                     <div class="subheading mb-5">
                         1850 N University Avenue · Provo, Ut 84604 · (913) 948-4546 ·
-                        <a href="mailto:name@email.com">tylerjnorth8614@gmail.com</a>
+                        tylerjnorth8614@gmail.com
+                        <br><br>
                         <a href="html/scratch.html">See Website</a>
                     </div>
                     <p class="lead mb-5">I am currently studing at BYU as a Freshmen and will be applying for the Mariott School of Business in the Summer of 2024.</p>
